--- a/index.Rmd
+++ b/index.Rmd
@@ -52,8 +52,8 @@ m  # Print the map
 
 ## Guidance
 You can get more information on the using the Leaflet library in r from the [Leaflet Github Repository](https://rstudio.github.io/leaflet/).  
-You can get more information on Leaflet from the [Leaflet website](https://leafletjs.com/index.html){:target="_blank"}.
-[This github](https://andrewbtran.github.io/NICAR/2017/maps/leaflet-r.html#how_to_put_the_map_online){:target="_blank"} also has some helpful examples
+You can get more information on Leaflet from the [Leaflet website](https://leafletjs.com/index.html){target="_blank"}.
+[This github](https://andrewbtran.github.io/NICAR/2017/maps/leaflet-r.html#how_to_put_the_map_online){target="_blank"} also has some helpful examples
 
 ***
 
@@ -92,7 +92,7 @@ m  # Print the map
 ### Base Map Tiles
 The easiest way to add tiles is by calling addTiles() with no arguments; by default, OpenStreetMap tiles are used.
 
-There are a range of popular free third-party basemaps which can be added using the addProviderTiles() function, which is implemented using the leaflet-providers plugin. You can [view examples of each base map  here](http://leaflet-extras.github.io/leaflet-providers/preview/index.html){:target="_blank"}.
+There are a range of popular free third-party basemaps which can be added using the addProviderTiles() function, which is implemented using the leaflet-providers plugin. You can [view examples of each base map  here](http://leaflet-extras.github.io/leaflet-providers/preview/index.html){target="_blank"}.
 
 As a convenience, leaflet also provides a named list of all the third-party tile providers that are supported by the plugin. Just type providers$ and choose from one of the options. You can also use names(providers) to view all of the options.
 
