--- a/index.Rmd
+++ b/index.Rmd
@@ -98,6 +98,8 @@ As a convenience, leaflet also provides a named list of all the third-party tile
 
 The example below uses the ESRI World Top Map as a basemap.  It also uses the setView function to set the intial position and zoom level of the map.  If you do not call the setView function, the default view will include any markers you have placed on the map.  As the example below does not have any markers, I have used setView to focus on a specific area rather than the intial view showing the whole world.
 
+setView allows you to specify a point on the map that you want your leaflet map to centre on.  You can get centre point coordinates, including box boundary coordinates, in many different CRS here: http://bboxfinder.com
+
 ```{r}
 m <- leaflet() %>%
   #Use the Esri World Topo Map as the basemap
@@ -153,10 +155,30 @@ m  # Print the map
 ***
 
 ## Heat map
+RLeaflet is a basic leaflet package that can be augmented with additional functions from the "leaflet.extras" packages.  Installing this package will add a lot of extra features to the leaflet package, such as making a heatmat of your data.
 
-```{r}
+Lets install that package and view the 'quakes' dataset that is included in RStudio;
+
+```{r echo=TRUE}
+install.packages("leaflet.extras")
+library(leaflet.extras)
+
+head(quakes)
+```
+
+As our data has WGS84 lat/long data, leaflet can project it without any issues.  Using the leaflet.extras fucntion "addWebGLHeatmap" we can display the quakes data in a heatmap.  To make the best use of the heatmap we should use a basemap that complements it.  See https://leaflet-extras.github.io/leaflet-providers/preview/ for a list of available basemaps for leaflet.extras.
+
+We'll use the ESRI WorldImagery map and set the intensity of the heat according to the magnitude of the measured earthquakes to get an idea of where the quakes are at their worst;
+
+```{r echo=TRUE}
+
+leaflet(quakes) %>% addProviderTiles(providers$Esri.WorldImagery) %>%
+  setView( 178, -20, 5 ) %>%
+    addHeatmap(lng = ~long, lat = ~lat, intensity = ~mag,
+               blur = 25, max = 0.05, radius = 12)
 
 ```
+
 
 ***
 
